--- a/buyorder/templates/buyorder/add_buyorder.html
+++ b/buyorder/templates/buyorder/add_buyorder.html
@@ -23,7 +23,28 @@
                 </div>
                 <br>
                 <hr>
-
+                <div class="row">
+                    <div class="col-12">
+                        <div class="">
+                            <!-- Button trigger modal -->
+                            <button type="button" class="form-control btn btn btn-primary" data-toggle="modal"
+                                    data-target="#exampleModal">
+                                <i class="fas fa-box"></i>
+                                New Product
+                            </button>
+                        </div>
+                        <br>
+                        <div class="">
+                            <!-- Button trigger modal -->
+                            <button type="button" class="form-control btn btn btn-success" data-toggle="modal"
+                                    data-target="#supplierModal">
+                                <i class="fas fa-truck"></i>
+                                New Supplier
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <br>
                 <table id="table_id" class="display text-center">
                     <thead>
                     <tr>
@@ -47,7 +68,7 @@
                             {{product.buyprice}}
                         </td>
                         <td>
-                            <select class="form-control"  name="types">
+                            <select class="form-control" name="types">
                                 {% for type in product.get_types%}
                                 <option value="{{type}}">{{type}}</option>
                                 {% endfor %}
@@ -78,6 +99,92 @@
     </div>
     <div class="col-md-2 col-sm-1"></div>
 </div>
+<!-- Modal Product -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">New Product</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                 <div class="card card-body">
+
+            <form action="{% url 'product:add_product_buyorder' city.id %}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{productform|crispy}}
+                <input class="btn btn-primary" type="submit" name="submit">
+            </form>
+        </div>
+        {% if productform.errors %}
+        {% for field in productform %}
+        {% for error in field.errors %}
+        <div class="alert alert-danger">
+            <strong>{{field.label}} {{ error|escape }}</strong>
+        </div>
+        {% endfor %}
+        {% endfor %}
+        {% for error in productform.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+        {% endfor %}
+        {% endif %}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Supplier -->
+<div class="modal fade" id="supplierModal" tabindex="-1" role="dialog" aria-labelledby="supplierModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="supplierModalLabel">New Supplier</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                 <div class="card card-body">
+
+            <form action="{% url 'supplier:add_supplier_buyorder' city.id %}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{supplierform|crispy}}
+                <input class="btn btn-primary" type="submit" name="submit">
+            </form>
+        </div>
+        {% if supplierform.errors %}
+        {% for field in supplierform %}
+        {% for error in field.errors %}
+        <div class="alert alert-danger">
+            <strong>{{field.label}} {{ error|escape }}</strong>
+        </div>
+        {% endfor %}
+        {% endfor %}
+        {% for error in supplierform.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+        {% endfor %}
+        {% endif %}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 {% endblock %}
 {% block jsscript %}
@@ -98,129 +205,30 @@
     $('#table_id').DataTable();
 } );
 
-    maxnum = 0
-
-    function updateElementIndex(el, prefix, ndx) {
-        var id_regex = new RegExp('(' + prefix + '-\\d+)');
-        var replacement = prefix + '-' + ndx;
-        if ($(el).attr("for")) $(el).attr("for", $(el).attr("for").replace(id_regex, replacement));
-        if (el.id) el.id = el.id.replace(id_regex, replacement);
-        if (el.name) el.name = el.name.replace(id_regex, replacement);
-    }
-
-    function cloneMore(selector, prefix) {
-        var newElement = $(selector).clone(true);
-        var total = $('#id_' + prefix + '-TOTAL_FORMS').val();
-        //  var inputs = $('input, textarea, select')
-        //      .not(':input[type=button], :input[type=submit], :input[type=reset]');
-        //  $(inputs).each(function () {
-        //      console.log(this.type);
-        // });
-
-        //  newElement = $('input').not(':input[type=button], :input[type=submit], :input[type=reset]');
-        // $(newElement).each(function () {
-
-
-        newElement.find(':input:not([type=button]):not([type=submit]):not([type=reset])').each(function () {
-            if ($(this).attr('name')) {
-                var name = $(this).attr('name').replace('-' + (total - 1) + '-', '-' + total + '-');
-                var id = 'id_' + name;
-                $(this).attr({
-                    'name': name,
-                    'id': id
-                }).val('').removeAttr('checked');
-            }
-            // var name = $(this).attr('name').replace('-' + (total - 1) + '-', '-' + total + '-');
-            // var id = 'id_' + name;
-            // $(this).attr({ 'name': name, 'id': id }).val('').removeAttr('checked');
-        });
-        newElement.find('label').each(function () {
-            var forValue = $(this).attr('for');
-            if (forValue) {
-                forValue = forValue.replace('-' + (total - 1) + '-', '-' + total + '-');
-                $(this).attr({
-                    'for': forValue
-                });
-            }
-        });
-        total++;
-        maxnum = total
-        // alert(maxnum);
-        $('#id_' + prefix + '-TOTAL_FORMS').val(total);
-        $(selector).after(newElement);
-        var conditionRow = $('.form-row:not(:last)');
-        conditionRow.find('.btn.add-form-row')
-            .removeClass('btn-success').addClass('btn-danger')
-            .removeClass('add-form-row').addClass('remove-form-row')
-            .html('<span class="glyphicon glyphicon-minus" aria-hidden="true"><i class="fas fa-minus"></i></span>');
-        return false;
-    }
-
-    function deleteForm(prefix, btn) {
-        var total = parseInt($('#id_' + prefix + '-TOTAL_FORMS').val());
-        if (total > 1) {
-            btn.closest('.form-row').remove();
-            var forms = $('.form-row');
-            $('#id_' + prefix + '-TOTAL_FORMS').val(forms.length);
-            for (var i = 0, formCount = forms.length; i < formCount; i++) {
-                $(forms.get(i)).find(':input').each(function () {
-                    updateElementIndex(this, prefix, i);
-                });
-            }
-        }
-        return false;
-    }
-    $(document).on('click', '.add-form-row', function (e) {
-        e.preventDefault();
-        cloneMore('.form-row:last', 'form');
-        fillitems();
-        return false;
-    });
-    $(document).on('click', '.remove-form-row', function (e) {
-        e.preventDefault();
-        deleteForm('form', $(this));
-        fillitems();
-        return false;
+$('#buyorderform').on('submit', function(e){
+         var form = this;
+         //var form = document.getElementById('buyorderform');
+         console.log(form)
+         var table = $('#table_id').DataTable();
+         // console.log(form);
+         // Iterate over all checkboxes in the table
+         table.$('input[type="checkbox"]').each(function(){
+         // If checkbox doesn't exist in DOM
+         if(!$.contains(document, this)){
+         if(this.checked){
+         // Create a hidden element
+         console.log(this)
+         $(form).append(
+         $('<input>')
+         .attr('type', 'hidden')
+         .attr('name', this.name)
+         .val(this.value)
+         );
+         }
+         }
+});
     });
 
-    // filling all the inputs in an array then assign fillitems to them
-    function fillitems() {
-        var inputs = document.querySelectorAll('select');
-        for (var i = 0; i < inputs.length; ++i) {
-            //alert("items filled "+inputs[i].id)
-           // inputs[i].addEventListener('input', suggestions);
-          // inputs[i].addEventListener('input', add_chosen);
-           full_id = inputs[i].id;
-           str = full_id.toString();
-           strarray = str.split("-");
-           //alert(strarray[strarray.length - 1]);
-           //alert(full_id);
-           console.log(full_id)
-           if (strarray[strarray.length - 1] === "product") {
-           $("#" + full_id).chosen();
-           console.log("Chosen"+full_id);
-           }
-        }
-    }
-
-    // add the first element
-    $(function () {
-        fillitems();
-    });
-
-    function add_chosen(){
-       // alert(this.id)
-        full_id = this.id;
-        str = full_id.toString();
-        strarray = str.split("-");
-        //alert(strarray[strarray.length - 1]);
-        //alert(full_id);
-        console.log(full_id)
-        if (strarray[strarray.length - 1] === "product") {
-            $("#" + full_id).chosen();
-            console.log("Chosen"+full_id);
-        }
-    }
 
 
 </script>
