--- a/product/templates/product/add_type.html
+++ b/product/templates/product/add_type.html
@@ -36,6 +36,9 @@
             <div class="row spacer">
                     <div class="col-4 offset-2">
                         <input class="btn form-control btn-primary" type="submit" name="submit">
+                        <br>
+                        <br>
+                        <input onclick="fill_prices()" class="btn form-control btn-warning" type="button" value="Fill Prices">
                     </div>
                 </div>
         </form>
