--- a/buyorder/templates/buyorder/add_buyorder.html
+++ b/buyorder/templates/buyorder/add_buyorder.html
@@ -69,8 +69,8 @@
                         </td>
                         <td>
                             <select class="form-control" name="types">
-                                {% for type in product.get_types%}
-                                <option value="{{type}}">{{type}}</option>
+                                {% for type in product.get_types %}
+                                <option value="{{type.id}}">{{type}}</option>
                                 {% endfor %}
                             </select>
                         </td>
