--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -53,6 +53,18 @@
     </div>
 </div>
 
+ <script type="text/javascript">
+        // Initialize the service worker
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register("{% url 'accounts:serviceworker' %}", {
+              scope: '.' // <--- THIS BIT IS REQUIRED
+            }).then(function (registration) {
+                console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            }, function (err) {
+                console.log('ServiceWorker registration failed: ', err);
+            });
+        }
+    </script>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
