--- a/warehouse/templates/stockproduct/detail.html
+++ b/warehouse/templates/stockproduct/detail.html
@@ -3,49 +3,57 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="product-detail">
-    <img class="img-fluid"
-         src="{% if stockproduct.image %}{{ stockproduct.image.url }}{% else %} {% static 'img/no_image.png' %}{% endif %}">
-    <h1>{{ stockproduct.id }}</h1>
-    <h1>{{ stockproduct.name }}</h1>
-    <h2>
-        {{ stockproduct.category }}
-    </h2>
-    <br>
-    <hr>
-    <br>
+    <div class="row">
+        <div class="col-sm-12 col-md-6">
+            <img class="img-fluid"
+                 src="{% if stockproduct.image %}{{ stockproduct.image.url }}{% else %} {% static 'img/no_image.png' %}{% endif %}">
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <h1>{{ stockproduct.id }}</h1>
+            <h1>{{ stockproduct.name }}</h1>
+            <h2>
+                {{ stockproduct.category }}
+            </h2>
+        </div>
+        <br>
+        <hr>
+        <br>
+    </div>
+
     <div class="row">
         <form action="{% url 'cart:cart_add' stockproduct.id %}" method="post">
             {% csrf_token %}
             <div class="row">
-            {% for type in stockproduct.get_types %}
+                {% for type in stockproduct.get_types %}
 
-            <div class="col-md-4">
-                {{ cart_product_form|crispy }}
-                <label for="{{stockproduct.id}}">Product </label>
-            <input id="{{stockproduct.id}}"  class="form-control" type="text" value="{{ stockproduct.name }}" name="names" disabled>
-           <label for="{{type.id}}">Type </label>
-            <input class="form-control" type="text" value="{{ type }}" id="{{type.id}}" name="types" readonly>
-            <hr>
-                        {% if customertype == 'type1' %}
-                        <h6 class="mb-3 price">{{type.price1}} DZD </h6>
-                        {% elif customertype == 'type2'%}
-                        <h6 class="mb-3 price">{{type.price2}} DZD</h6>
-                        {% elif customertype == 'type3'%}
-                        <h6 class="mb-3 price">{{type.price3}} DZD</h6>
-                        {% elif customertype == 'type4'%}
-                        <h6 class="mb-3 price">{{type.price4}} DZD</h6>
-                        {% elif customertype == 'type5'%}
-                        <h6 class="mb-3 price">{{type.price5}} DZD</h6>
-                        {% elif customertype == 'type6'%}
-                        <h6 class="mb-3 price">{{type.price6}} DZD</h6>
-                        {% else %}
-                        <h6 class="mb-3 price">0</h6>
-                        {% endif %}
+                <div class="col-md-4">
+                    {{ cart_product_form|crispy }}
+                    <label for="{{stockproduct.id}}">Product </label>
+                    <input id="{{stockproduct.id}}" class="form-control" type="text" value="{{ stockproduct.name }}"
+                           name="names" disabled>
+                    <label for="{{type.id}}">Type </label>
+                    <input class="form-control" type="text" value="{{ type }}" id="{{type.id}}" name="types" readonly>
+                    <hr>
+                    {% if customertype == 'type1' %}
+                    <h6 class="mb-3 price">{{type.price1}} DZD </h6>
+                    {% elif customertype == 'type2'%}
+                    <h6 class="mb-3 price">{{type.price2}} DZD</h6>
+                    {% elif customertype == 'type3'%}
+                    <h6 class="mb-3 price">{{type.price3}} DZD</h6>
+                    {% elif customertype == 'type4'%}
+                    <h6 class="mb-3 price">{{type.price4}} DZD</h6>
+                    {% elif customertype == 'type5'%}
+                    <h6 class="mb-3 price">{{type.price5}} DZD</h6>
+                    {% elif customertype == 'type6'%}
+                    <h6 class="mb-3 price">{{type.price6}} DZD</h6>
+                    {% else %}
+                    <h6 class="mb-3 price">0</h6>
+                    {% endif %}
 
-</div>
-
-            {% endfor %}
                 </div>
+
+                {% endfor %}
+            </div>
             <br>
             <input type="submit" value="Add to Cart">
         </form>
