--- a/warehouse/templates/stockproduct/detail.html
+++ b/warehouse/templates/stockproduct/detail.html
@@ -19,14 +19,14 @@
         <hr>
         <br>
     </div>
-
-    <div class="row">
+    <div class="container">
+            <div class="row">
         <form action="{% url 'cart:cart_add' stockproduct.id %}" method="post">
             {% csrf_token %}
             <div class="row">
                 {% for type in stockproduct.get_types %}
 
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-12">
                     {{ cart_product_form|crispy }}
                     <label for="{{stockproduct.id}}">Product </label>
                     <input id="{{stockproduct.id}}" class="form-control" type="text" value="{{ stockproduct.name }}"
@@ -57,6 +57,8 @@
             <br>
             <input type="submit" value="Add to Cart">
         </form>
+
+    </div>
 
     </div>
 
