--- a/order/templates/order/list_order.html
+++ b/order/templates/order/list_order.html
@@ -8,8 +8,11 @@
                 <h5>Orders</h5>
             </div>
             <div class="card card-body">
-                <table class="table">
-                    {% for order in orders %}
+               <a class="btn btn-primary btn-lg form-control" href="{% url 'customer:order_city_list' %}">
+                   <i class="fas fa-file-invoice-dollar"></i> Billing</a>
+            </div>
+            <div class="card card-body">
+                <table id="table_id" class="table">
 
                     <thead>
                     <tr>
@@ -20,9 +23,11 @@
                         <th>Delivered</th>
                         <th>Total Price</th>
                         <th>Total Weight</th>
+                        <th></th>
                     </tr>
                     </thead>
                     <tbody>
+                    {% for order in orders %}
                     <tr>
                         <td>{{order.id}}</td>
                         <td>{{order.customer}}</td>
@@ -32,49 +37,36 @@
                         <td>DZD {{order.get_total_cost}}</td>
                         <td>KG {{order.get_total_weight}}</td>
                         <td>
-                            <a class="btn btn-warning " href="{% url 'order:order_pdf' order.id %}">Print</a>
+                            <a class="btn btn-warning " href="{% url 'order:sellorder_details' order.id %}">Details</a>
                         </td>
                     </tr>
+                     {% endfor %}
 
-                    <thead  class="thead-light">
-                <tr>
-                    <th></th>
-                        <th>Product Name</th>
-                        <th>Price</th>
-                        <th>Quantity</th>
-                        <th>Total Cost</th>
-                        <th>Total Weight</th>
-                    <th></th>
-                    </tr>
-                </thead>
-
-                    {% for item in order.items.all %}
-                    <tr>
-                        <td class="table-light"></td>
-                        <td class="table-light">{{ item.stockproduct.product.name }}</td>
-                        <td class="table-light ">DZD{{ item.price }}</td>
-                        <td class="table-light ">{{ item.quantity }}</td>
-                        <td class="table-light">DZD{{ item.get_cost }}</td>
-                        <td class="table-light">KG {{ item.get_weight }}</td>
-                        <td class="table-light"></td>
-                    </tr>
-                    {% endfor %}
-
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
                     </tbody>
-
-                    {% endfor %}
                 </table>
             </div>
         </div>
     </div>
 
+{% endblock %}
+{% block jsscript %}
+<!-- custom javascript -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.min.css"/>
+<!-- Data Table  -->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
+
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
+
+<script type='text/javascript'>
+    //Data Table init
+    $(document).ready( function () {
+    $('#table_id').DataTable();
+} );
+
+
+</script>
 {% endblock %}
