--- a/order/templates/order/sellorder_details.html
+++ b/order/templates/order/sellorder_details.html
@@ -56,7 +56,7 @@
                 {% for item in order.items.all %}
                 <tr>
                     <td class="table-light">{{ item.product.name }}</td>
-                    <td class="table-light">{{ item.type }}</td>
+                    <td class="table-light">{{ item.product_type }}</td>
                     <td class="table-light ">DZD{{ item.price }}</td>
                     <td class="table-light ">{{ item.quantity }}</td>
                     <td class="table-light">DZD{{ item.get_cost }}</td>
