--- a/warehouse/templates/stockproduct/list_stockproduct.html
+++ b/warehouse/templates/stockproduct/list_stockproduct.html
@@ -1,72 +1,79 @@
-{% extends 'base.html' %}
+{% extends 'home.html' %}
 {% load static %}
-
 {% block content %}
-
 <br>
 <div class="container">
     <div class="row">
-        <div class="col-sm-12 col-md-3 col-lg-3">
-            <h3>Categories</h3>
-            <div class="list-group">
-                {% for c in categories %}
-                    <a
-                       {% if category == c %}
-                        class=" list-group-item list-group-item-action active"
-                       {% else %}
-                       class="list-group-item list-group-item-action"
-                       {% endif %}
-                       href="{{ c.get_absolute_url }}">{{ c.name }}</a>
-                {% endfor %}
-            </div>
+    <div class="col-md">
+        <div class="card card-body">
+            <h5>Stock Products</h5>
         </div>
-        <div class="col-sm-12 col-md-9 col-lg-9">
-            <div class="row">
-                {% for stockproduct in stockproducts %}
-                <div class="col-lg-4 col-md-3 mb-3">
+        <div class="card card-body">
+            <table id="table_id" class=" table display text-center">
+              <thead>
+              <tr>
+                    <th>Name</th>
+                    <th>Stock</th>
+                    <th>Category</th>
+                    <th>Quantity</th>
+                    <th>Type</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+              </thead>
+                <tbody>
+                {% for prod in stockproducts %}
+                <tr>
+                    <td>
+                       {{prod.product.name}}
+                   </td>
+                    <td>
+                       {{prod.stock}}
+                   </td>
+                    <td>
+                       {{prod.category}}
+                   </td>
+                    <td>
+                       {{prod.quantity}}
+                   </td>
+                    <td>
+                       {{prod.type}}
+                   </td>
 
-                    <div class="view zoom overlay z-depth-2 rounded">
-                        <img class="card-img img-fluid w-100 mask waves-effect waves-light" style=" height: 25vh;"
-                             src="{{stockproduct.product.image.url}}"
-                             alt="{{stockproduct.product.name}}">
-                    </div>
-                    <div class="text-center pt-4">
-                        <h5>{{stockproduct.product.name}}</h5>
-                        <p class="mb-2 text-muted text-uppercase small">{{stockproduct.product.category}}</p>
-                        <hr>
-                        {% if customertype == 'type1'%}
-                        <h6 class="mb-3">{{stockproduct.product.price1}} DZD </h6>
-                        {% elif customertype == 'type2'%}
-                        <h6 class="mb-3">{{stockproduct.product.price2}} DZD</h6>
-                        {% elif customertype == 'type3'%}
-                        <h6 class="mb-3">{{stockproduct.product.price3}} DZD</h6>
-                        {% elif customertype == 'type4'%}
-                        <h6 class="mb-3">{{stockproduct.product.price4}} DZD</h6>
-                        {% elif customertype == 'type5'%}
-                        <h6 class="mb-3">{{stockproduct.product.price5}} DZD</h6>
-                        {% elif customertype == 'type6'%}
-                        <h6 class="mb-3">{{stockproduct.product.price6}} DZD</h6>
-                        {% else %}
-                        <h6 class="mb-3">0</h6>
-                        {% endif %}
-                        <a class="btn btn-primary btn-sm mr-1 mb-2"
-                           href=" {% url 'warehouse:stockproduct_detail' stockproduct.id %}">
-                            <i
-                                    class="fas fa-shopping-cart pr-2"></i>Add to cart
-                        </a>
-
-                    </div>
-                    <!--  <div class="card family-card bg-dark text-white"></div>-->
-                </div>
-
-
+                    <td>
+                        <a class="btn btn-success " href="{% url 'warehouse:update_stockproduct' prod.id %}">Update</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-danger " href="{% url 'warehouse:delete_stockproduct' prod.id %}">Delete</a>
+                    </td>
+                </tr>
                 {% endfor %}
-            </div>
+                </tbody>
+
+            </table>
         </div>
     </div>
 </div>
 
-<script>
+</div>
+{% endblock %}
+{% block jsscript %}
+<!-- custom javascript -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.min.css"/>
+<!-- Data Table  -->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
+
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
+
+<script type='text/javascript'>
+    //Data Table init
+    $(document).ready( function () {
+    $('#table_id').DataTable();
+} );
 
 </script>
 {% endblock %}
