delete family from cart details

--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -53,7 +53,7 @@
 <p class="text-right">
     <!--  order create from order app  -->
     <a href="{% url 'order:order_create' %}" class="button">Checkout</a>
-    <a href="{% url 'family:family_list' %}" class="button light">Continue</a>
+    <a href="{% url 'category:category_list' %}" class="button light">Continue</a>
 </p>
 
 {% endblock %}
