--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% block content %}
 {% load i18n %}
+{% load erpextra %}
+<!-- If the user is admin -->
+{% if request.user|has_group:"admin" %}
 <div class="row">
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-left-primary shadow h-100 py-2">
@@ -168,6 +171,11 @@
         </div>
     </div>
 </div>
+{% endif %}
+<!-- If the user is delivery -->
+{% if request.user|has_group:"delivery" %}
+<p>Delivery View</p>
+{% endif %}
 
 {% endblock %}
 {% block jsscript %}
